# exchange

./: .gitignore  CLIENT_TODO.md  INFRA_TODO.md  README.md  TODO.md
client/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
docs/: docs.json  index.mdx
docs/reference/: authentication.mdx  competition-guide.mdx  error-codes.mdx  market-lifecycle.mdx  rate-limits.mdx  recovery-and-resync.mdx  rest-api.mdx  websocket-api.mdx
docs/rest/: amend-order.mdx  balance.mdx  cancel-order.mdx  fills.mdx  health.mdx  markets.mdx  open-orders.mdx  portfolio.mdx  positions.mdx  submit-order.mdx  user.mdx
docs/websocket/: amend-order.mdx  authenticate.mdx  cancel-order.mdx  server-messages.mdx  submit-order.mdx  subscribe-data-stream.mdx  unsubscribe-data-stream.mdx
exchange/: .env.example  Cargo.toml  README.md
exchange/benches/: latency.rs
exchange/deploy/systemd/: market-data-service.service
exchange/sql/migrations/: 001_initial.sql
exchange/src/: accounts.rs  admin.rs  auth.rs  bots.rs  checkpoint.rs  config.rs  derived_marketdata.rs  docs.rs  lib.rs  main.rs  marketdata.rs  marketdata_bridge.rs  marketdata_ipc.rs  marketdata_service.rs  matching.rs  orderbook.rs  rate_limit.rs  rest.rs  settlement.rs  state.rs  storage.rs  telemetry.rs  trading.rs  ws.rs
exchange/tests/: api_integration.rs  latency_smoke.rs  ws_integration.rs
infra/client-ecs/: README.md  build_and_push.sh  deploy_stack.sh  (+2 more)
internal-docs/: README.md  exchange-20k-review.md
(+94 files in other folders)
