[package]
name = "exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-tungstenite = "0.24.0"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "latency"
harness = false
